# lightpress

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/lightpress/: container.hpp  exif.hpp  ffmpeg.hpp  image.hpp  jpeg.hpp  lightpress.hpp  png.hpp  resize.hpp
src/: container.cpp  exif.cpp  ffmpeg.cpp  image_io.cpp  jpeg_enc.cpp  png_enc.cpp  resize.cpp
tests/: bench_ffmpeg.cpp  ssim.hpp  test_container.cpp  test_exif.cpp  test_jpeg.cpp  test_png.cpp  test_resize.cpp
